# DNAB

./: .gitignore  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  QUICK_START.md
android-injections/: .gitignore  MIGRATION.md  README.md  debug_plane_counter.py  hardware_touch.py  main.py  main_qt.py  pyproject.toml  requirements.txt
android-injections/data/internal/bounds/: minimap.json  xp.json
android-injections/data/internal/targets/: hit.json  minimap_counter.json  miss.json
android-injections/src/android_injections/: __init__.py  main.py
android-injections/src/android_injections/automation/: __init__.py  auto_target.py  delay_manager.py  human_input_simulator.py  performance_logger.py  state_manager.py
android-injections/src/android_injections/config/: __init__.py  game_config.py
android-injections/src/android_injections/targeting/: __init__.py  color_analysis.py  exclusion_manager.py  target_loader.py  target_saver.py
android-injections/src/android_injections/ui/: __init__.py  keyboard_handler.py  mouse_handler.py  qt_renderer.py  ui_renderer.py  ui_state.py
android-injections/src/android_injections/vision/: __init__.py  color_filter.py  state_eval.py
android-injections/tests/: __init__.py  conftest.py  test_automation.py  test_config.py  test_config_integration.py  test_filter_modes.py  test_imports.py  test_keyboard_handler.py  test_mouse_handler.py  test_qt_renderer.py  test_qt_ui.py  test_targeting.py  test_ui_renderer.py  test_ui_state.py  test_vision.py
android-injections/tests/contracts/: __init__.py  conftest.py  test_configuration_contract.py  test_control_contract.py  test_rendering_contract.py  test_stream_contract.py
deprecated/: Makefile
